--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         title="Logotipo DIO com o texto make the change"
         alt="Logotipo DIO com o texto make the change"
       />
-      <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
+      <h3>Desenvolvido por Hebert Dias © 2024</h3>
+      <p>Materiais gráficos disponibilizados por DIO para exercício</p>
     </footer>
   </body>
 </html>
