--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         alt="Logotipo DIO com o texto make the change"
       />
       <h3>Desenvolvido por Hebert Dias © 2024</h3>
-      <p>Materiais gráficos disponibilizados por DIO para exercício</p>
+      <p>Materiais disponibilizados por DIO para exercício</p>
     </footer>
   </body>
 </html>
